# tqdm.c

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  LICENCE  README.md
include/tqdm/: tqdm.h  utils.h
src/: main.c  tqdm.c  utils.c
test/: test-core.c  test-macros.c
